--- a/hugo.toml
+++ b/hugo.toml
@@ -1,19 +1,86 @@
+title = "Blogtatus"
 baseURL = "http://localhost/"
 languageCode = "it"
-title = "Blogtatus"
-theme = "github.com/hugo-sid/hugo-blog-awesome"
-[pagination]
-  pagerSize = 5
+defaultContentLanguage = "it"
 enableEmoji = true
+ignoreErrors = ["additional-script-loading-error"]
 
-[params]
-  subtitle = "Archivio personale multimediale"
-  enableReadingTime = true
-  enableWordCount = true
-  ShowFullTextinRSS = true
-  useCDN = false
+[module]
+[[module.imports]]
+  path = "github.com/hugo-sid/hugo-blog-awesome"
+
+[services]
+  [services.googleAnalytics]
+    id = ''
+  [services.disqus]
+    shortname = ''
 
 [markup]
-  [markup.goldmark]
-    [markup.goldmark.renderer]
-      unsafe = true
+  [markup.highlight]
+    noClasses = false
+  [markup.goldmark.renderer]
+    unsafe = true
+  [markup.tableOfContents]
+    startLevel = 2
+    endLevel = 4
+    ordered = false
+
+[Languages.it]
+  languageName = "Italiano"
+  contentDir = "content/it"
+  weight = 1
+
+  [Languages.it.menu]
+  [[Languages.it.menu.main]]
+    name = 'Home'
+    pageRef = '/'
+    url = '/'
+    weight = 10
+
+  [[Languages.it.menu.main]]
+    name = 'Articoli'
+    pageRef = 'posts'
+    url = '/posts/'
+    weight = 20
+
+  [[Languages.it.menu.main]]
+    name = 'Chi Sono'
+    pageRef = 'about'
+    url = '/about/'
+    weight = 30
+
+[Languages.it.params]
+  sitename = "Blogtatus"
+  defaultColor = "dark"
+  description = "Archivio personale multimediale – giochi, film, frammenti di realtà."
+  mainSections = ['posts']
+  toc = true
+  tocOpen = false
+  goToTop = true
+  dateFormat = "2 January 2006"
+  rssFeedDescription = "summary"
+
+[Languages.it.params.author]
+  avatar = "avatar.jpg"  # deve essere in /assets/
+  intro = "Archivio personale"
+  name = "Andrea"
+  description = "Parlo di giochi, film, sogni, disastri. A volte tutto insieme."
+
+[Languages.it.params.webmanifest]
+  name = "Blogtatus"
+  short_name = "Blogtatus"
+  start_url = "/"
+  theme_color = "#434648"
+  background_color = "#fff"
+  display = "standalone"
+
+[params.browserconfig]
+  TileColor = "#2d89ef"
+
+[[params.socialIcons]]
+name = "github"
+url = "https://github.com/Crostatus"
+
+[[params.socialIcons]]
+name = "Rss"
+url = "/index.xml"
